###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(name = "blackboard", version = "0.1")

bazel_dep(name = "boost.smart_ptr", version = "1.89.0")
bazel_dep(name = "rules_foreign_cc", version = "0.15.0")
