_BASE_SRCS = glob([
    "srcs/*.cpp",
    "include/auto_test/*.h",
])

_CYBER_SRCS = [
    "cyber/main.cpp",
    "cyber/writer.cpp",
    "cyber/reader.cpp",
]

cc_binary(
    name = "test_blackboard",
    srcs = _BASE_SRCS,
    includes = [
        "include",
        ".",
    ],
    deps = [
        "//pt-dummy:pt_dummy",
        "//pt-shared_any:pt_shared_any",
        "//pt-intrusive_variant:pt_intrusive_variant",
        "//3rd/nlohmann_json:json",
    ],
    # CMake had -DUSE_THREAD_TIMER and C++17.
    copts = [
        "-DUSE_THREAD_TIMER",
        "-std=c++17",
    ],
    linkopts = ["-lpthread"],
    visibility = ["//visibility:public"],
)
