_BASE_SRCS = glob([
    "srcs/*.cpp",
    "include/*.h",
])

_CYBER_SRCS = [
    "cyber/main.cpp",
    "cyber/writer.cpp",
    "cyber/reader.cpp",
]

cc_binary(
    name = "test_blackboard",
    srcs = _BASE_SRCS,
    includes = [
        "include",
        ".",
    ],
    deps = [
        "//src/pt-dummy:pt_dummy",
        "//src/pt-shared_any:pt_shared_any",
        "//src/pt-intrusive_variant:pt_intrusive_variant",
        "//3rd/nlohmann_json:json",
    ],
    # CMake had -DUSE_THREAD_TIMER and C++17.
    copts = [
        "-DUSE_THREAD_TIMER",
        "-std=c++17",
    ],
    linkopts = ["-lpthread"],
    visibility = ["//visibility:public"],
)
_BH_SRCS = glob([
    "behavior_tree/*.cpp",
    "behavior_tree/*.h",
])

cc_binary(
    name = "test_blackboard_bh",
    srcs = _BASE_SRCS + _BH_SRCS,
    includes = [
        "include",
        "include/json",
        ".",
    ],
    deps = [
        "//src/pt-dummy:pt_dummy",
        "//src/pt-shared_any:pt_shared_any",
        "//src/pt-intrusive_variant:pt_intrusive_variant",
        "//3rd/nlohmann_json:json",
        "//3rd/rapidxml-1.13:rapidxml",
        "//3rd/behavior_tree:behaviortree_cpp_v3",
    ],
    # CMake had -DUSE_THREAD_TIMER and C++17.
    copts = [
        "-DUSE_THREAD_TIMER",
        "-DENABLE_BT_BLACKBOARD",
        "-std=c++17",
    ],
    linkopts = ["-lpthread"],
    visibility = ["//visibility:public"],
)
