_BASE_SRCS = glob([
    "srcs/*.cpp",
    "include/*.h",
    "pt-dummy/*.cpp",
    "pt-dummy/*.h",
    "pt-shared_any/*.cpp",
    "pt-shared_any/*.h",
    "pt-intrusive_variant/*.cpp",
    "pt-intrusive_variant/*.h",
])

_TEST_CYBER_SRCS = glob([
    "cyber/*.cpp",
    "cyber/*.h",
])

_TEST_BT_SRCS = glob([
    "behavior_tree/*.cpp",
    "behavior_tree/*.h",
])

cc_binary(
    name = "test_blackboard",
    srcs = _BASE_SRCS,
    includes = [
        "include",
        ".",
    ],
    deps = [
        "//src/pt-dummy:pt_dummy",
        "//src/pt-shared_any:pt_shared_any",
        "//src/pt-intrusive_variant:pt_intrusive_variant",
        "//3rd/nlohmann_json:json",
    ],
    # CMake had -DUSE_THREAD_TIMER and C++17.
    copts = [
        "-DUSE_THREAD_TIMER",
        "-std=c++17",
    ],
    linkopts = ["-lpthread"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "test_blackboard_bh",
    srcs = _BASE_SRCS + _TEST_BT_SRCS,
    includes = [
        "include",
        "include/json",
        ".",
    ],
    deps = [
        "//src/pt-dummy:pt_dummy",
        "//src/pt-shared_any:pt_shared_any",
        "//src/pt-intrusive_variant:pt_intrusive_variant",
        "//3rd/nlohmann_json:json",
        "//3rd/rapidxml-1.13:rapidxml",
        "//3rd/behavior_tree:behaviortree_cpp_v3",
    ],
    # CMake had -DUSE_THREAD_TIMER and C++17.
    copts = [
        "-DUSE_THREAD_TIMER",
        "-DENABLE_BT_BLACKBOARD",
        "-std=c++17",
    ],
    linkopts = ["-lpthread"],
    visibility = ["//visibility:public"],
)
