cc_library(
    name = "pt_intrusive_variant",
    hdrs = [
        "includes/intrusive_ptr_pool.h",
        "includes/intrusive_variant_blackboard.h",
    ],
    includes = ["includes"],
    visibility = ["//visibility:public"],
    deps = [
        "//concurrentqueue",
        "//common",
    ]
)

cc_binary(
    name = "test_intrusive_ptr_pool",
    srcs = [
        "tests/test_intrusive_ptr_pool.cpp",
    ],
    copts = ["-DUSE_CONCURRENTQUEUE"],
    linkopts = ["-lpthread"],
    deps = [
        ":pt_intrusive_variant"
    ]
)

cc_binary(
    name = "test_intrusive_variant_blackboard",
    srcs = [
        "tests/test_intrusive_variant_blackboard.cpp",
    ],
    copts = ["-DUSE_CONCURRENTQUEUE"],
    linkopts = ["-lpthread"],
    deps = [
        ":pt_intrusive_variant"
    ]
)